[project]
name = "my-py-lib"
version = "0.1.0"
description = "My personal library maintained as I explore python"
readme = "README.md"
authors = [
    { name = "Dhyey", email = "dhyeyshah2336@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
